@@ -21,6 +21,7 @@ version 0.84.03
 	Renaming exposure submode to scene mode
 	--settings_hex
 	Avoid infinite loop if green button fails
+	Adding bufmask field to --status printing
 
 version 0.84.02 ( 2016-10-31 )
 	Android code cleanup
